// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loader > should render with custom class names 1`] = `
<DocumentFragment>
  <div
    class="border-theme-warning-200 bg-theme-warning-50 dark:border-theme-warning-600 flex w-full flex-row items-center gap-3 rounded-xl border px-6 py-5 dark:bg-transparent custom-class"
    data-testid="Loader__wrapper"
  >
    <div
      class="animate-spin shrink-0 w-5 h-5 border-[3px] border-theme-warning-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-l-theme-warning-900 dark:border-l-theme-warning-600 dim:border-l-theme-warning-600 rounded-full"
    />
    <hr
      class="bg-theme-warning-200 dark:bg-theme-secondary-800 h-5 w-px border-transparent"
    />
    <span
      class="text-theme-secondary-700 dark:text-theme-warning-600 text-sm font-semibold md:text-base"
      data-testid="Loader__text"
    >
      Testing
    </span>
  </div>
</DocumentFragment>
`;

exports[`Loader > should render with custom text 1`] = `
<DocumentFragment>
  <div
    class="border-theme-warning-200 bg-theme-warning-50 dark:border-theme-warning-600 flex w-full flex-row items-center gap-3 rounded-xl border px-6 py-5 dark:bg-transparent"
    data-testid="Loader__wrapper"
  >
    <div
      class="animate-spin shrink-0 w-5 h-5 border-[3px] border-theme-warning-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-l-theme-warning-900 dark:border-l-theme-warning-600 dim:border-l-theme-warning-600 rounded-full"
    />
    <hr
      class="bg-theme-warning-200 dark:bg-theme-secondary-800 h-5 w-px border-transparent"
    />
    <span
      class="text-theme-secondary-700 dark:text-theme-warning-600 text-sm font-semibold md:text-base"
      data-testid="Loader__text"
    >
      Testing
    </span>
  </div>
</DocumentFragment>
`;
